--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@camptocamp/closure-util",
-  "version": "1.25.0",
+  "version": "1.26.0",
   "description": "Utilities for Closure Library based projects. Camptocamp fork with support for goog.module.",
   "main": "lib/index.js",
   "homepage": "https://github.com/camptocamp/closure-util",
@@ -48,6 +48,9 @@
     "closure-util": "./bin/closure-util.js"
   },
   "eslintConfig": {
-    "extends": ["openlayers", ".eslintrc-es6.yaml"]
+    "extends": [
+      "openlayers",
+      ".eslintrc-es6.yaml"
+    ]
   }
 }
