--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
   },
   "license": "MIT",
   "dependencies": {
-    "acorn": "5.5.1",
-    "async": "2.6.0",
-    "fs-extra": "5.0.0",
-    "gaze": "1.1.2",
+    "acorn": "^6.0.6",
+    "async": "^2.6.1",
+    "fs-extra": "^7.0.1",
+    "gaze": "^1.1.3",
     "get-down": "1.2.0",
-    "glob": "7.1.2",
-    "graceful-fs": "4.1.11",
-    "handlebars": "4.0.11",
-    "lodash": "4.17.5",
+    "glob": "^7.1.3",
+    "graceful-fs": "^4.1.15",
+    "handlebars": "^4.0.12",
+    "lodash": "^4.17.11",
     "minimatch": "3.0.4",
     "mkdirp": "0.5.1",
     "nomnom": "1.8.1",
     "npmlog": "4.1.2",
-    "rimraf": "2.6.2",
+    "rimraf": "^2.6.3",
     "send": "0.16.2",
-    "socket.io": "2.0.4",
-    "temp": "0.8.3"
+    "socket.io": "^2.2.0",
+    "temp": "^0.9.0"
   },
   "devDependencies": {
-    "chai": "4.1.2",
     "eslint": "4.19.0",
     "eslint-config-openlayers": "7.0.0",
-    "mocha": "5.0.0",
-    "supertest": "3.0.0"
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "supertest": "^3.4.2"
   },
   "scripts": {
     "postinstall": "node ./bin/closure-util.js update",
