--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "acorn": "^6.0.6",
+    "acorn": "5.7.3",
     "async": "^2.6.1",
     "fs-extra": "^7.0.1",
     "gaze": "^1.1.3",
